feat(dag): get dag content
